BMGT301 Web Development Assignment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><strong>Jisue Gonzales</strong></title>
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117907296-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-117907296-2');
+</script>		<title><strong>Jisue Gonzales</strong></title>
 	</head>
 	<body>
 	    <a href="http://hmpg.net/"><img src="https://sites.google.com/site/jsdfkdfjdlal/home/Gonzales_Jisue.JPG?attredirects=0"HEIGHT="200" WIDTH="135" BORDER="0"/></a>
