BMGT301 Web Development Assignment

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-117907296-2');
-</script>		<title><strong>Jisue Gonzales</strong></title>
-	</head>
+</script>			</head>
 	<body>
-	    <a href="http://hmpg.net/"><img src="https://sites.google.com/site/jsdfkdfjdlal/home/Gonzales_Jisue.JPG?attredirects=0"HEIGHT="200" WIDTH="135" BORDER="0"/></a>
+<h1 style="text-align:center"><strong>Jisue Gonzales</strong></h1>	    <a href="http://hmpg.net/"><img src="https://sites.google.com/site/jsdfkdfjdlal/home/Gonzales_Jisue.JPG?attredirects=0"HEIGHT="200" WIDTH="135" BORDER="0"/></a>
 	    <!--"The following is a general description of myself--><p style="font-size: 40px"> <em>I am a freshman Accounting and Information Systems double major at the University of Maryland. </em></p>
 	    <!--"The following lists my interests"--><h2 style="font-family: Arial; color: red; font-size: 40px; background-color: black"> Interests </h2>
 	    <ul> 
