--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -37,5 +38,6 @@
             <li> Sushi </li>
             <li> Fettucine Alfredo </li>
         </ol>
+	<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 	</body>
 </html>
